--- a/index.html
+++ b/index.html
@@ -76,31 +76,8 @@ Note: You have to complete findCount function. No need to take any inpu</h3>
 };  
 </pre>
   <h2>Even Odd</h2>
-  <h3>You are given an array 
-    A
-     containing 
-    N
-     integer elements, and your task is to return an array 
-    B
-     
-    (
-    having a size equal to 
-    2
-    )
-    , where 
-    B
-    [
-    0
-    ]
-     contains the sum of all even elements of array A and 
-    B
-    [
-    1
-    ]
-     has the sum of all odd elements of the array 
-    A
-    .
-    
+  <h3>You are given an array A containing  N  integer elements, and your task is to return an array  B (having a seqto 
+    2 )  , where  B [ 0 ]  contains the sum of all even elements of array A and  B [ 1 ]  has the sum of all odd elements of the array  A . 
     Note: You have to complete findEvenOdd function. No need to take any input</h3>
   <pre>
   
