--- a/index.html
+++ b/index.html
@@ -100,16 +100,7 @@ const findEvenOdd = (N, Arr) =>
 <h2>Higher Age</h2>
   <h3>
     You are given an array 
-A
- containing the age of persons in your locality, and your task is to find and return an array containing the age of persons that are over 
-18
- 
-(
-18
- included
-)
-.
-
+Acontaining the age of persons in your locality, and your task is to find and return an array containing the age of persons that are over 18(18 included).
 Note: Also, in the output array, the age should be in the same order as in the input array. You have to complete highAge function. No need to take any input
   </h3>
   <pre> 
